# structured-output

./: README.md  pyproject.toml  setup.sh
data/: customer.json  hotel.json  option.json  room.json  system_prompt.json  table_association.json
src/structured_output/: __init__.py  class_database.py  generation_data.py  generation_database.py  utils.py
