[project]
name = "structured-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeanne", email = "jeanne.wwork@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
structured-output = "structured_output:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
